--- a/html/site/css/homepage.css
+++ b/html/site/css/homepage.css
@@ -132,12 +132,12 @@ h2 {
 }
 
 .hide-on-desktop {
-    display: none!important
+    display: inline-block!important
 }
 
 @media(max-width: 768px) {
     .hide-on-mobile {
-        display:none!important
+        display:inline-block!important
     }
 
     .hide-on-desktop {
