--- a/html/site/css/homepage.css
+++ b/html/site/css/homepage.css
@@ -137,7 +137,7 @@ h2 {
 
 @media(max-width: 768px) {
     .hide-on-mobile {
-        display:inline-block!important
+        display:flex!important
     }
 
     .hide-on-desktop {
